# RandomizeAnime

./: .gitignore  CMakeLists.txt  main.exe.manifest  readme.md
dep/curl/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
dep/nlohmann_json/docs/mkdocs/: requirements.txt
include/: anime.hpp  client_id.h  curl_http.h  func.hpp
res/tokens/: token.txt
src/: CMakeLists.txt  anime.cpp  curl_http.cpp  func.cpp  main.cpp
